# proof-of-wasted-work

./: .gitignore  Anchor.toml  Cargo.toml  README.md  bitcoin_tip_job.json  bitcoin_tip_job.yaml  btc_job.json  check-job.ts  create-aggregator.ts  create-job.ts  monitor-aggregator.ts  monitor-job.ts  package.json  tsconfig.json  update-aggregator.ts
programs/proof_of_wasted_work/: Cargo.toml
programs/proof_of_wasted_work/src/: lib.rs  state.rs
scripts/: multi-airdrop.ts  tsconfig.json
tests/: btc-near-miss.ts
